force-app/main/default/objects/THSK__Laptop_Warranty__c/THSK__Laptop_Warranty__c.object-meta.xml
<CustomObject>
    <label>Laptop Warranty</label>
    <nameField>
        <label>Laptop Warranty</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Laptop Warranties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>