force-app/main/default/objects/THSK__Laptop_Warranty__c/fields/THSK__Active_Warranty__c.field-meta.xml
<CustomField>
    <fullName>THSK__Active_Warranty__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active Warranty</label>
    <type>Checkbox</type>
</CustomField>