force-app/main/default/objects/THSK__Laptop_Warranty__c/fields/THSK__Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>THSK__Expiration_Date__c</fullName>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>