force-app/main/default/objects/THSK__Laptop_Warranty__c/fields/THSK__Support_Level__c.field-meta.xml
<CustomField>
    <fullName>THSK__Support_Level__c</fullName>
    <label>Support Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Bronze</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>