force-app/main/default/objects/THSK__Laptop_Warranty__c/listViews/THSK__All.listView-meta.xml
<ListView>
    <fullName>THSK__All</fullName>
    <columns>NAME</columns>
    <columns>THSK__Customer__c</columns>
    <columns>THSK__Email__c</columns>
    <columns>THSK__Support_Level__c</columns>
    <columns>THSK__Expiration_Date__c</columns>
    <columns>THSK__Active_Warranty__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>